# fcd_processing

./: .gitignore  README.md  pyproject.toml
fcd_processing/: extract_fcd.py  main.py
fcd_processing/config/: data_frame_config.yaml
