[tool.poetry]
name = "fcd-processing"
version = "0.1.0"
description = "Program to Extract Floating Car Data Based on a Given Polygon"
authors = ["MDiRocco <marc.dirocco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
geopandas = "^1.0.1"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
